Your descriptive message here

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,6 @@
   <body class="bg-gradient-to-br from-bunker-950 to-black">
     <div id="root"></div>
     <!-- Point to your entry file in src -->
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
